<resources>
  <string name="app_name">Groceriesh</string>
  <string name="products">Products</string>
  <string name="stores">Stores</string>
  <string name="home">Home</string>
  <string name="orders">Orders</string>
  <string name="basket">Basket</string>
  <string name="your_credit">Your credit</string>
  <string name="profile">Profile</string>
  <string name="my_location">My Location</string>
  <string name="choose_delivery_address">Please choose your delivery address!</string>
  <string name="login">Login</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="register">Register</string>
  <string name="please_login_to_your_account_to_continue">Please login to your account to continue.</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="phone_number">Phone Number</string>
  <string name="delivery_address">Delivery Address</string>
  <string name="choose_address_on_map">Choose Address on Map</string>
  <string name="back_to_login">Back to Login</string>
  <string name="submit">Submit</string>
  <string name="tap_to_change_location">Tap to change location</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="password_and_confirm_not_same">Password and Confirm Password must be same!</string>
  <string name="enter_password_confirm">Please Enter Confirm Password.</string>
  <string name="enter_password">Please enter Password.</string>
  <string name="enter_phone">Please enter Phone.</string>
  <string name="email_not_valid">Please enter a valid Email.</string>
  <string name="enter_email">Please enter your Email.</string>
  <string name="enter_name">Please enter your First Name.</string>
  <string name="enter_last_name">Please enter your Last Name.</string>
  <string name="no_internet">Device is NOT connected to Internet!</string>
  <string name="check_your_internet">Please check your Internet connection!</string>
  <string name="connectionError">An error occurred, Please try again!</string>
  <string name="welcome_to_groceriesh">Welceome to Groceriesh!</string>
  <string name="move_map_to_choose_your_location">Move Map to choose your location.</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="increase_credit">Increase Credit</string>
  <string name="logout">Logout</string>
  <string name="credit_0">Credit: 0£</string>
  <string name="logout_prompt">Are you sure to Logout?</string>
  <string name="yes">Yes</string>
  <string name="cancel">Cancel</string>
  <string name="new_products">New Products</string>
  <string name="priceUnit">£</string>
  <string name="add_to_basket">Add to Basket</string>
  <string name="continue_str">Continue</string>
  <string name="total">Total</string>
  <string name="empty_basket">Empty Basket</string>
  <string name="empty_basket_prompt">Are you sure you want to empty your basket?</string>
  <string name="filter_prompt">Showing $NAME Products</string>
  <string name="delivery_to_address">Delivery To: $ADDRESS</string>
  <string name="note">Please write the note here</string>
  <string name="dont_ring_the_bell">Please do not ring the bell, call me instead.</string>
  <string name="leave_the_order_at_door">Please Leave the order at my door.</string>
  <string name="order_and_pay">Order and Pay</string>
  <string name="checkout">Checkout</string>
  <string name="order_detail">Order Detail</string>
  <string name="notes_placeholder">Notes: $NOTES</string>
  <string name="delivery_time_placeholder">Delivery Time: $TIME</string>
  <string name="delivered_time_placeholder">Delivered At: $TIME</string>
  <string name="not_delivered">Not Delivered</string>
  <string name="delivered">Delivered</string>
  <string name="choose_delivery_time">Choose delivery time</string>
  <string name="please_choose_delivery_time">Please choose your prefered delivery time</string>
</resources>