<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_layout_top_rounded"
    android:orientation="vertical">

    <include layout="@layout/bottomsheet_top_line" />


      <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm6">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:divider="@drawable/shape_space_vertical"
          android:showDividers="middle"
          android:padding="@dimen/fragmentPadding"
          android:paddingTop="@dimen/dm12"
          android:paddingStart="@dimen/dm20"
          android:paddingEnd="@dimen/dm20"
          android:gravity="center"
          android:orientation="vertical">

          <EditText
            style="@style/EditText"
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:inputType="textPersonName" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:inputType="textPersonName" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:inputType="phone" />


          <EditText
            style="@style/EditText"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_address"
            android:maxLines="1"
            android:inputType="textPostalAddress|textMultiLine" />

          <androidx.appcompat.widget.AppCompatButton
            style="@style/NormalBorderedButton"
            android:id="@+id/btnChooseAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_address_on_map"
            android:textColor="@color/mainColor"
            tools:ignore="RtlHardcoded" />

          <androidx.appcompat.widget.AppCompatButton
            style="@style/NormalButton"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dm6"
            android:text="@string/register"
            tools:ignore="RtlHardcoded" />

          <androidx.appcompat.widget.AppCompatButton
            style="@style/NormalBorderedRectangleButton"
            android:id="@+id/btnBacktoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dm14"
            android:text="@string/back_to_login"
            android:drawableStart="@drawable/ic_back"
            app:drawableTint="@color/textColor"
            tools:ignore="RtlHardcoded" />

        </LinearLayout>
      </ScrollView>

    </LinearLayout>
</layout>