<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar"
      app:title="@{@string/register}" />

      <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:divider="@drawable/shape_space_vertical"
          android:showDividers="middle"
          android:paddingTop="@dimen/dm10"
          android:paddingStart="@dimen/dm20"
          android:paddingEnd="@dimen/dm20"
          android:gravity="center"
          android:orientation="vertical">

          <EditText
            style="@style/EditText"
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:inputType="textPersonName" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:inputType="textPersonName" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:inputType="phone" />


          <EditText
            style="@style/EditText"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_address"
            android:maxLines="1"
            android:inputType="textPostalAddress" />

          <include android:id="@+id/mapContainer" layout="@layout/choose_map_address" />

          <androidx.appcompat.widget.AppCompatButton
            style="@style/NormalButton"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dm6"
            android:layout_marginBottom="@dimen/dm10"
            android:text="@string/register"
            tools:ignore="RtlHardcoded" />

        </LinearLayout>
      </ScrollView>

    </LinearLayout>
</layout>