<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar"
      app:title="@{@string/edit_profile}" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:divider="@drawable/shape_space_vertical"
          android:showDividers="middle"
          android:gravity="center"
          android:orientation="vertical">

          <include android:id="@+id/mapContainer" layout="@layout/choose_map_address" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginTop="@dimen/dm16"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:inputType="textPersonName" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:inputType="textPersonName" />


          <EditText
            style="@style/EditText"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:enabled="false"
            android:inputType="textEmailAddress" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:inputType="phone" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:inputType="textPassword" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:maxLines="1"
            android:inputType="textPassword" />

          <EditText
            style="@style/EditText"
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/delivery_address"
            android:layout_marginStart="@dimen/dm20"
            android:layout_marginEnd="@dimen/dm20"
            android:layout_marginBottom="@dimen/dm16"
            android:maxLines="1"
            android:inputType="textPostalAddress" />

        </LinearLayout>
      </ScrollView>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
      style="@style/NormalButton"
      android:id="@+id/btnRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/dm10"
      android:layout_marginBottom="@dimen/dm10"
      android:layout_marginStart="@dimen/dm20"
      android:layout_marginEnd="@dimen/dm20"
      android:text="@string/register"
      tools:ignore="RtlHardcoded" />

  </LinearLayout>
</layout>