<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_layout_top_rounded"
    android:orientation="vertical">

    <include layout="@layout/bottomsheet_top_line" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:divider="@drawable/shape_space_vertical"
      android:showDividers="middle"
      android:padding="@dimen/fragmentPadding"
      android:layout_marginTop="@dimen/dm6"
      android:gravity="center"
      android:orientation="vertical">

      <TextView
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm6"
        android:layout_marginBottom="@dimen/dm14"
        android:gravity="center"
        android:text="@string/please_login_to_your_account_to_continue" />

      <EditText
        style="@style/EditText"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:layout_marginStart="@dimen/dm20"
        android:layout_marginEnd="@dimen/dm20"
        android:inputType="textEmailAddress" />

      <EditText
        style="@style/EditText"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:maxLines="1"
        android:layout_marginStart="@dimen/dm20"
        android:layout_marginEnd="@dimen/dm20"
        android:inputType="textPassword" />

      <androidx.appcompat.widget.AppCompatButton
        style="@style/NormalButton"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dm6"
        android:layout_marginStart="@dimen/dm20"
        android:layout_marginEnd="@dimen/dm20"
        android:text="@string/login"
        tools:ignore="RtlHardcoded" />

      <androidx.appcompat.widget.AppCompatButton
        style="@style/NormalBorderedButton"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/mainColor"
        android:layout_marginStart="@dimen/dm20"
        android:layout_marginEnd="@dimen/dm20"
        tools:ignore="RtlHardcoded" />

    </LinearLayout>
    </LinearLayout>
</layout>