<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar"
      app:title="@{@string/checkout}" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="@dimen/dm10"
      android:orientation="vertical">

      <EditText
        style="@style/EditText"
        android:background="@drawable/shape_edit_text_rectangle"
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="start"
        tools:ignore="RtlHardcoded"
        android:hint="@string/note" />

      <CheckBox
        android:id="@+id/chDontRingTheBell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/mainColor"
        android:textColor="@color/textColor"
        android:text="@string/dont_ring_the_bell" />

      <CheckBox
        android:id="@+id/chLeaveOrderAtDoor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/mainColor"
        android:textColor="@color/textColor"
        android:text="@string/leave_the_order_at_door" />

      <TextView
        style="@style/NormalBorderedRectangleButton"
        android:id="@+id/tvDeliveryTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/mainColor"
        android:textColor="@color/textColor"
        android:padding="@dimen/dm10"
        android:layout_marginTop="@dimen/dm10"
        android:text="@string/choose_delivery_time" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/cardBackground"
      android:divider="@drawable/shape_space_horizental"
      android:showDividers="middle"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/dm10"
        android:divider="@drawable/shape_space_horizental"
        android:showDividers="middle"
        android:orientation="vertical">

        <TextView
          style="@style/HeaderText"
          android:id="@+id/tvTotal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/mainColor"
          tools:text="Total: 0" />

        <TextView
          style="@style/HeaderText"
          android:id="@+id/tvAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/mainColor"
          tools:text="@string/delivery_to_address" />

      </LinearLayout>

      <androidx.appcompat.widget.AppCompatButton
        style="@style/NormalButton"
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dm10"
        android:layout_marginBottom="@dimen/dm10"
        android:layout_marginStart="@dimen/dm10"
        android:layout_marginEnd="@dimen/dm10"
        android:text="@string/order_and_pay" />

    </LinearLayout>


  </LinearLayout>
</layout>